--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -15,9 +15,9 @@ html {
 }
 
 body {
-  font-family: 'BERNIERR';
+  font-family: 'a_futurica';
   font-style: normal;
-  font-weight: 600;
+  font-weight: 800;
   color: @primary;
   height: 100vh;
   background: @primary url(../img/bg.webp) no-repeat center;
