--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,8 +1,13 @@
 @font-face {
-    font-family: 'BERNIERR';
-    src: url('../fonts/BERNIERRegular-Regular.otf');
-    src: url('../fonts/BERNIERRegular-Regular.woff') format('woff'),;
+    font-family: 'a_futurica';
+    src: url('../fonts/afuturica.ttf');
     font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'a_futurica';
+    src: url('../fonts/afuturicaextrabold.ttf');
+    font-weight: 800;
     font-style: normal;
 }
 
@@ -10,5 +15,7 @@
 @import "global/global.less";
 
 
+@import "blocks/slide.less";
 @import "blocks/leaders.less";
 @import "blocks/participants.less";
+@import "blocks/randomizer.less";
