--- a/source/less/blocks/leaders.less
+++ b/source/less/blocks/leaders.less
@@ -1,61 +1,41 @@
 .leaders {
-  margin-top: calc(100vw * (69 / 1980));
-  margin-left: calc(100vw * (130 / 1980));
+  margin-top: calc(100vw * (94 / 1980));
+  margin-inline: calc(100vw * (52 / 1980)) calc(100vw * (63 / 1980));
   display: grid;
 
   &__list {
+    margin-left: auto;
     display: grid;
     grid-template-rows: repeat(3, min-content);
     gap: calc(100vw * (83 / 1980));
   }
 
   &__item {
-    width: calc(100vw * (912 / 1980));
+    width: calc(100vw * (949 / 1980));
     height: calc(100vw * (241 / 1980));
-    padding-block: calc(100vw * (35 / 1980)) calc(100vw * (23 / 1980));
+    padding-inline: calc(100vw * (40 / 1980));
     background-color: @bg;
     border-radius: 50px;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    position: relative;
+  }
 
-    &::before {
-      content: "";
-      width: calc(100vw * (285 / 1980));
-      height: calc(100vw * (198 / 1980));
-      display: block;
-      background: transparent no-repeat center;
-      background-size: 100%;
-      position: absolute;
-      bottom: calc(100vw * (-89 / 1980));
-      left: calc(100vw * (-86 / 1980));
-    }
-
-    &:nth-child(1)::before {
-      background-image: url(../img/gold.webp);
-    }
-
-    &:nth-child(2)::before {
-      background-image: url(../img/silver.webp);
-    }
-
-    &:nth-child(3)::before {
-      background-image: url(../img/bronze.webp);
-    }
+  &__place {
+    font-size: calc(100vw * (90 / 1980));
+    line-height: calc(100vw * (121 / 1980));
+    flex-shrink: 0;
   }
 
   &__name {
-    font-weight: 400;
-    font-size: calc(100vw * (70 / 1980));
-    line-height: calc(100vw * (84 / 1980));
+    font-size: calc(100vw * (50 / 1980));
+    line-height: calc(100vw * (67 / 1980));
+    width: calc(100vw * (550 / 1980));
+    margin-inline: calc(100vw * (42 / 1980)) auto;
   }
 
   &__scores {
-    font-weight: 400;
-    font-size: calc(100vw * (90 / 1980));
-    line-height: calc(100vw * (84 / 1980));
-    font-feature-settings: 'pnum' on, 'lnum' on;
-    margin-top: calc(100vw * (-9 / 1980));
+    font-size: calc(100vw * (82 / 1980));
+    line-height: calc(100vw * (111 / 1980));
+    flex-shrink: 0;
   }
 }
