--- a/source/less/blocks/participants.less
+++ b/source/less/blocks/participants.less
@@ -2,39 +2,80 @@
   display: grid;
 
   &__list {
-    max-height: 100vh;
-    overflow: hidden;
+    display: grid;
+    grid-template-rows: repeat(6, min-content);
+    gap: calc(100vw * (21 / 1980));
+    margin-top: calc(100vw * (70 / 1980));
   }
 
   &__item {
     width: calc(100vw * (797 / 1980));
-    padding: calc(100vw * (25 / 1980)) calc(100vw * (10 / 1980));
-    margin-block: calc(100vw * (10 / 1980));
+    height: calc(100vw * (172 / 1980));
+    padding-inline: calc(100vw * (37 / 1980));
     background-color: @bg;
     border-radius: 50px;
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    transform: translateY(0);
+  }
+
+  &__place {
+    font-size: calc(100vw * (80 / 1980));
+    line-height: calc(100vw * (108 / 1980));
+    flex-shrink: 0;
   }
 
   &__name {
-    font-weight: 400;
-    font-size: calc(100vw * (55 / 1980));
-    line-height: calc(100vw * (66 / 1980));
+    font-size: calc(100vw * (37 / 1980));
+    line-height: calc(100vw * (50 / 1980));
+    margin-inline: calc(100vw * (34 / 1980)) auto;
   }
 
   &__scores {
-    font-weight: 400;
     font-size: calc(100vw * (65 / 1980));
-    line-height: calc(100vw * (78 / 1980));
-    font-feature-settings: 'pnum' on, 'lnum' on;
-    margin-top: calc(100vw * (-10 / 1980));
+    line-height: calc(100vw * (88 / 1980));
+  }
+}
+
+.slide2 {
+  .participants {
+  display: grid;
+
+  &__list {
+    margin-top: calc(100vw * (87 / 1980));
+  }
+
+  &__item {
+    height: calc(100vw * (134 / 1980));
+    border-radius: 40px;
+  }
+
+  &__place {
+    font-size: calc(100vw * (63 / 1980));
+    line-height: calc(100vw * (85 / 1980));
+    text-align: center;
+    width: calc(100vw * (84 / 1980));
+  }
+
+  &__name {
+    font-size: calc(100vw * (32 / 1980));
+    line-height: calc(100vw * (43 / 1980));
+  }
+
+  &__scores {
+    font-size: calc(100vw * (60 / 1980));
+    line-height: calc(100vw * (81 / 1980));
+  }
+
+  &:first-child {
+    .participants__list {
+      margin-inline: calc(100vw * (111 / 1980)) calc(100vw * (104 / 1980));
+    }
+  }
+
+  &:last-child {
+    .participants__list {
+    margin-inline: auto calc(100vw * (111 / 1980));
+    }
   }
 
 }
-
-.marquee-wrapper {
-  overflow: hidden;
-  position: relative;
 }
