--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -19,6 +19,7 @@ body {
   font-style: normal;
   font-weight: 800;
   color: @primary;
+  text-transform: uppercase;
   height: 100vh;
   background: @primary url(../img/bg.webp) no-repeat center;
   background-size: 100% 100%;
